# poly

./: CMakeLists.txt  common.hpp  poly.cpp  poly.hpp  term.hpp  test.cpp  test.py
.github/workflows/: c-cpp.yml
test/: test1.in  test1.out  test2.in  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out  test6.in  test7.in  test7.out
